Plugin: BankAccount
Author: TAT
CHANGELOG

0.5DEV
Fixed basic permissionnode
Fixed not showing all commands in help
Added command to list accounts
Do no longer look for unused plugins
Now subtract money when manual payment is used

0.4
Added loan
	- Automatic payment
	- Manual payment
	- Loan status
Added API
Added support for GroupManager
Added permission nodes
Players shall now have permission for bankaccount.user (If using Permissions or GroupManager)
Fixed MySQL interest bug in 0.3e
New way to add missing tables
New way to hook up to plugin
New way to show help
Code cleanup
Updated to CraftBukkit #617

0.3e
Change from int to double in ATM
Update to match deprecation of iConomy.save
Fixed check for admin if UsePermissions is true but Permissions isn't running
Fixed SQLite errors
Added SuperAdmins (Give admins access to all accounts)

0.3d
Fixed FORWARD_ONLY for SQLite

0.3c
Fixed wrong percentage in interest
Now showing decimals
Now showing if running interest on loadConfiguration
Now write to console when running interest

0.3b
Fixed global not working

0.3a
Fixed missing MySQL database in config and configLoading

0.3
Auto creating tables
Added SQLite
Added interest system
Added support for bankareas
Amount in SQL changed from int to double to match iConomy

0.2
Updated to latest bukkit [#493]

0.1
First Release