@@ -1,0 +1,43 @@
+##
+#Plugin: BankAccount
+#Author: TAT
+#CONFIGURATION WITHOUT COMMENTS
+#Rename to config.yml if you want to use this
+##
+
+SQL-info:
+    Transactions: true
+    MySQL: false
+    Host: localhost
+    Port: 3306
+    User: root
+    Pass: password
+    Database: minecraft
+SQL-tables:
+    Account: bankaccounts
+    Area: bankareas
+    Loan: bankloans
+    Transaction: banktransactions
+Permissions:
+    OP: true
+    Permissions: false
+    GroupManager: false
+    SuperAdmins: true
+    DepositAll: true
+Areas:
+    Active: true
+    AreaWandId: 339
+Interest:
+    Time: 5
+    Amount: 0.1
+Loan:
+    Active: false
+    Fixed-rate: 0.00
+    Rate:
+        0.01: 0.05
+        50.01: 0.10
+        100.01: 0.30
+        200.01: 0.50
+    Max-amount: 200
+    Payment-time: 60
+    Payment-parts: 3
