@@ -1,6 +1,6 @@
 name: BankAccount
 main: dk.earthgame.TAT.BankAccount.BankAccount
-version: 0.4
+version: 0.5DEV
 commands:
     account:
         description: Shared Bank Accounts
